tests/samples/0023/error.txt
error[P0031]: unexpected token `implements`, expected `(`
  --> 0023/code.ara:3:22
  |
3 |     return new class implements Foo, Bar {};
  |                      ^^^^^^^^^^

error: failed to parse "0023/code.ara" due to the above issue(s)
 = summary: 1 error(s)

